# HPC4WC-Project

./: .gitignore  CMakeLists.txt  README.md  README_8md.html  annotated.html  argsparser_8h.html  argsparser_8h_source.html  autotuner_8h.html  autotuner_8h_source.html  boundary__condition_8h.html  boundary__condition_8h_source.html  classHPC4WC_1_1ArgsParser-members.html  classHPC4WC_1_1ArgsParser.html  classHPC4WC_1_1AutoTuner-members.html  classHPC4WC_1_1AutoTuner.html  classHPC4WC_1_1Config-members.html  classHPC4WC_1_1Config.html  classHPC4WC_1_1CubeInitialCondition-members.html  classHPC4WC_1_1CubeInitialCondition.html  classHPC4WC_1_1DiagonalInitialCondition-members.html  classHPC4WC_1_1DiagonalInitialCondition.html  classHPC4WC_1_1Diffusion-members.html  classHPC4WC_1_1Diffusion.html  classHPC4WC_1_1DirichletBoundaryConditions-members.html  classHPC4WC_1_1DirichletBoundaryConditions.html  classHPC4WC_1_1Field-members.html  classHPC4WC_1_1Field.html  classHPC4WC_1_1IO-members.html  classHPC4WC_1_1IO.html  classHPC4WC_1_1Partitioner-members.html  classHPC4WC_1_1Partitioner.html  classHPC4WC_1_1PeriodicBoundaryConditions-members.html  classHPC4WC_1_1PeriodicBoundaryConditions.html  classHPC4WC_1_1SimpleDiffusion-members.html  classHPC4WC_1_1SimpleDiffusion.html  classHPC4WC_1_1Timer-members.html  classHPC4WC_1_1Timer.html  classHPC4WC_1_1XInitialCondition-members.html  classHPC4WC_1_1XInitialCondition.html  classes.html  (+37 more)
.github/workflows/: build.yml  documentation.yml  unittests.yml
docs/: Doxyfile.in
ext/: CMakeLists.txt
scripts/: block_ij_compiletime.py  cmake.sh  create_env.sh  plotHeatMap.py  showmat.py
scripts/output/: output_block_ij_big_compiletime.txt
scripts/slurm/: block_ij.sh  openmp_k.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+27 more)
src/: CMakeLists.txt
src/HPC4WC/: CMakeLists.txt
src/HPC4WC/include/HPC4WC/: autotuner.h  boundary_condition.h  config.h  diffusion.h  field.h  halo.h  initial_condition.h  io.h  partitioner.h  timer.h
src/HPC4WC/src/: autotuner.cpp  boundary_condition.cpp  config.cpp  diffusion.cpp  diffusion_simple.cpp  field.cpp  initial_condition.cpp  io.cpp  partitioner.cpp
src/autotuner/: CMakeLists.txt  main.cpp
src/executables/: CMakeLists.txt  autotune_search.cpp  block_i.cpp  diffusion2d.cpp  experiment_openmp_k.cpp  mpi_diffusion.cpp
tests/: Test_Diffusion.cpp  Test_Field.cpp  Test_InitialConditions.cpp
